Minor Bug fixes (#983)
* MM-9761 - Close button overlapping at the bottom

* MM-9817 - Fixing LHS header popover z-index

* MM-9760 - Removing tooltip on mobile

--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -951,7 +951,7 @@
                 height: calc(100% - 48px);
                 left: 0;
                 overflow: auto;
-                padding: 1.4em 0 0;
+                padding: 2.5em 0 0;
                 position: fixed;
                 top: 48px;
                 visibility: hidden;
@@ -965,21 +965,21 @@
                 .close {
                     @include border-radius(50%);
                     border: 1px solid $white;
-                    bottom: 25px;
                     color: $white;
                     display: block;
                     font-family: 'Open Sans', sans-serif;
                     font-size: 23px;
                     font-weight: 200;
                     height: 30px;
-                    left: 50%;
                     line-height: 0;
                     margin-left: -15px;
                     opacity: 1;
                     padding-top: 13px;
                     position: fixed;
+                    right: 20px;
                     text-align: center;
                     text-shadow: none;
+                    top: 20px;
                     width: 30px;
                 }
 
@@ -992,7 +992,7 @@
                         line-height: 35px;
                         margin: 0 auto;
                         text-align: center;
-                        width: 90%;
+                        width: 70%;
 
                         &:hover {
                             background: transparent;
